name:                google-drive
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/google-drive#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      spreadsheet-reader/src
  exposed-modules:     Spreadsheet.Reader
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , http-conduit
                     , bytestring
  default-language:    Haskell2010

executable google-drive
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , google-drive
                     , aeson
